--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 </head>
 <body>
 
+<!-- Overlay Tap Once -->
+<div id="overlay">
+    <p>💗 Tap once to feel our love 💗</p>
+</div>
+
 <!-- Background Music -->
-<audio autoplay loop>
+<audio id="bgMusic" loop>
     <source src="music/beautiful-in-white.mp3" type="audio/mpeg">
-    Browser Anda tidak mendukung audio.
 </audio>
 
 <header>
@@ -35,8 +39,6 @@
     <p>Forever Together 💍</p>
 </footer>
 
-<!-- Script JS (WAJIB di bawah) -->
 <script src="script.js"></script>
-
 </body>
 </html>
